--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1965,11 +1965,10 @@ en:
     <p>Push frequency: <b>100ms</b></p>
   websocket_para_trade_ud: |
     <b>instruction:</b><br>
-    Get recent trade data from Bybit.<br>
     After subscription, you will be pushed delta trade message in real-time once there is an order filled.<br><br>
     Push frequency: <b>real-time</b><br><br>
     <b>Topic:</b><br>
-    <code>publicTrade.{symbol}</code>(Option uses baseCoin)
+    <code>recently_trade.{symbol}</code>
   ### insurance
   websocketinsurance: insurance
   websocket_para_insurance: |
@@ -2031,7 +2030,7 @@ en:
     </ul>
     <p>Push frequency: <b>1-60s</b></p>
     <p><b>Topic:</b></p>
-    <p><code>kline.{interval}.{symbol}</code></p>
+    <p><code>candle.{interval}.{symbol}</code></p>
   websocket_aside_klineV2: |
     If <code>confirm</code> is <code>True</code>, the data is the final tick for the interval. Otherwise, it is a snapshot.
   websocketkline: kline
@@ -5585,18 +5584,15 @@ en:
     Get different depth.<br>
     Once subscribe successfully, you will receive a snapshot. The data is ordered by order price, which bids is from highest to lowest and asks is from lowest to highest.
     Websocket will keep pushing delta message when orderbook is changed. If you receive a new snapshot data, it's necessary to reset your local orderbook.<br><br>
-    <b>type</b>: <code>snapshot</code>=Full orderbook, <code>delta</code>=delta orderbook<br>
+    <b>type</b>: <code>snapshot</code>=Full orderbook, <code>delta</code>=delta orderbook<br> <code>reset</code>=reset orderbook<br>
     If there is a problem in bybit end, it will re-send a snapshot, which is promised the latest and accurate.<br><br>
-    1 level data, push frequency: <b>10ms</b> <br>
-    50 level data, push frequency: <b>20ms</b> <br>
+    25 level data, push frequency: <b>20ms</b> <br>
     200 level data, push frequency: <b>100ms</b> <br>
-    500 level data, push frequency: <b>100ms</b> <br>
+  
     <br>
     <b>Topic: </b><br>
-    <code>orderbook.1.{symbol}</code><br>
-    <code>orderbook.50.{symbol}</code><br>
-    <code>orderbook.200.{symbol}</code><br>
-    <code>orderbook.500.{symbol}</code><br>
+    <code>orderBook_25.H.{symbol}</code><br>
+    <code>orderBook_200.H.{symbol}</code><br>
 
   predicatedFundingRate_v3: Predicated funding rate. usdt perp, inverse perp and inverse futures is <code>""</code>
   row_comment_resp_next_funding_time_v3: Next settlement time of capital cost (ms). Inverse futures is <code>""</code>
