--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1983,9 +1983,9 @@ en:
     <p>Push frequency: <b>100ms</b></p>
   websocket_para_ticker_UM: |
     <p>Get latest information for symbol.</p>
-    <p>Push frequency: <b>100ms</b>(Futures), <b>200ms</b>(Option)</p>
+    <p>Push frequency: <b>100ms</b>(Futures)
     <p><b>Topic:</b></p>
-    <p><code>instrument_info.H.{symbol}</code></p>
+    <p><code>tickers-100.{symbol}</code></p>
   websocket_para_ticker_contract: |
     <p>Get latest information for symbol.</p>
     <p>Push frequency: <b>100ms</b></p>
