--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5546,11 +5546,11 @@ en:
     <ul>
     <p>
     <li><b>Mainnet</b>:<br/>
-        Contract account: <span id="ca_mainnet_address">wss://stream.bybit.com/contract/private/v3</span>
+        Contract account: <span id="ca_mainnet_address">wss://stream.bybit.com/contract/private</span>
         <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#ca_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
     </li>
     <li><b>Testnet</b>:<br/>
-        Contract account: <span id="ca_testnet_address">wss://stream-testnet.bybit.com/contract/private/v3</span>
+        Contract account: <span id="ca_testnet_address">wss://stream-testnet.bybit.com/contract/private</span>
         <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#ca_testnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
     </li>
      </p>
