--- a/locales/zh-my.yml
+++ b/locales/zh-my.yml
@@ -5116,11 +5116,11 @@ zh-my:
     <ul>
     <p>
     <li><b>主網</b>:<br/>
-        合约帳戶: <span id="ca_mainnet_address">wss://stream.bybit.com/contract/private/v3</span>
+        合约帳戶: <span id="ca_mainnet_address">wss://stream.bybit.com/contract/private</span>
         <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#ca_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
     </li>
     <li><b>測試網</b>:<br/>
-        合约帳戶: <span id="ca_testnet_address">wss://stream-testnet.bybit.com/contract/private/v3</span>
+        合约帳戶: <span id="ca_testnet_address">wss://stream-testnet.bybit.com/contract/private</span>
         <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#ca_testnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
     </li>
      </p>
