--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5487,37 +5487,17 @@ en:
     <ul>
     <p>
     <li><b>Mainnet</b>:<br/>
-        USDT contract: <span id="usdt_mainnet_address">wss://stream.bybit.com/contract/usdt/public/v3</span>
+        USDT contract: <span id="usdt_mainnet_address">wss://fstream.betterbitfinance.com/public/v1</span>
         <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#usdt_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
         <br/>
-        USDC contract: <span id="usdc_mainnet_address">wss://stream.bybit.com/contract/usdc/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#usdc_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
-        <br/>
-        USDC Options: <span id="option_mainnet_address">wss://stream.bybit.com/option/usdc/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#option_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
-    </li>
-    <li><b>Testnet</b>:<br/>
-        USDT contract: <span id="usdt_testnet_address">wss://stream-testnet.bybit.com/contract/usdt/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#usdt_testnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
-        <br/>
-        USDC contract: <span id="usdc_testnet_address">wss://stream-testnet.bybit.com/contract/usdc/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#usdc_testnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
-        <br/>
-        USDC Options: <span id="option_testnet_address">wss://stream-testnet.bybit.com/option/usdc/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#option_testnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
-    </li>
      </p>
     </ul>
     <p><b>WebSocket private channel</b>:</p>
     <ul>
     <p>
     <li><b>Mainnet</b>:<br/>
-        Unified margin account: <span id="uma_mainnet_address">wss://stream.bybit.com/unified/private/v3</span>
+        Unified margin account: <span id="uma_mainnet_address">wss://fstream.betterbitfinance.com/private/v1</span>
         <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#uma_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
-    </li>
-    <li><b>Testnet</b>:<br/>
-        Unified margin account: <span id="uma_testnet_address">wss://stream-testnet.bybit.com/unified/private/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#uma_testnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
     </li>
      </p>
     </ul>
