--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5507,18 +5507,17 @@ en:
     <ul>
     <p>
     <li><b>Mainnet</b>:<br/>
-        USDT contract: <span id="usdt_2_mainnet_address">wss://stream.bybit.com/contract/usdt/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#usdt_2_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
+        USDT contract: <span id="usdt_mainnet_address">wss://fstream.betterbitfinance.com/public/v1</span>
+        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#usdt_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
         <br/>
-        Inverse contract: <span id="inverse_mainnet_address">wss://stream.bybit.com/contract/inverse/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#inverse_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
-    </li>
-    <li><b>Testnet</b>:<br/>
-        USDT contract: <span id="usdt_2_testnet_address">wss://stream-testnet.bybit.com/contract/usdt/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#usdt_2_testnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
-        <br/>
-        Inverse contract: <span id="inverse_testnet_address">wss://stream-testnet.bybit.com/contract/inverse/public/v3</span>
-        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#inverse_testnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
+     </p>
+    </ul>
+    <p><b>WebSocket private channel</b>:</p>
+    <ul>
+    <p>
+    <li><b>Mainnet</b>:<br/>
+        Unified margin account: <span id="uma_mainnet_address">wss://fstream.betterbitfinance.com/private/v1</span>
+        <button class="clipboard_button" data-clipboard-action="copy" data-clipboard-target="#uma_mainnet_address"><img src="/images/copy_to_clipboard.png" height=15 width=15></img></button>
     </li>
     </p>
     </ul>
