--- a/locales/en.yml
+++ b/locales/en.yml
@@ -4623,7 +4623,7 @@ en:
   usdcOrderFilter: refer to  <a href="#order-filter-orderfilter">Order Filter</a>
   usdcReplaceOrderId: Order ID, required for Options
   usdcOrderLinkId: Either orderId or orderLinkId is required
-  cancelAllResponse: This is used to cancel all active orders. The real-time response indicates whether the request is successful, depending on retCode.
+  cancelAllResponse: This is used to cancel all active orders. The real-time response indicates whether the request is successful, depending on code.
   usdcSymbolInfo: Query for all if blank.
   symbolStatus: Status, can be WAITING_ONLINE, ONLINE, DELIVERING, or OFFLINE
 
