--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5300,6 +5300,7 @@ en:
   order: Order
   unified_margin_account_para: <ul><li>Unified margin account supports to trade USDT perpetual, USDC perpetual and option.</li><li>The following account data endpoints require authentication.</li></ul>
   dv_placeOrder: Place Order
+  dv_batchPlaceOrder: Batch Create Order
   dv_replaceOrder: Replace Order
   dv_cancelOrder: Cancel Order
   dv_queryOrderRealtime: Get Open Orders
@@ -5592,6 +5593,8 @@ en:
     <p>Custom order ID: You may customise order IDs for active orders. We will link it to the system order ID, and return the unique system order ID to you after the active order is created successfully. You may use this order ID or your custom order ID to cancel your active order. The customised order ID should be unique, with a maximum length of 36 characters.</p>
     <p><b>Each account can hold up to 500 active orders yet to be filled entirely simultaneously. This is per instrument, so it's possible to have, for example, 300 active orders on the BTCUSDT instrument and 280 active orders on the ETHUSDT instrument.</b></p>
 
+  contract_batch_order_para: |
+    <p>This endpoint provides the batch order mode to place a bunch of orders.</p>
 
   # Contract Account >> Account
   contract_account: Account
